[sdist_dsc]
force-x-python3-version: true
X-Python3-Version: >=3.10.0
Depends3: python3-mako, python3-markdown

[options]
include_package_data = True
packages = find_namespace:
package_dir = 
	=src

[options.packages.find]
where = src

[options.package_data]
npc.settings = 
	*.yaml
	types/**/*.*
npc.templates =
	*.mako
	*.md
	*.html
